--- a/giao-dien/category.html
+++ b/giao-dien/category.html
@@ -14,6 +14,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
     <!-- <script src='main.js'></script> -->
 
+
+
 </head>
 
 <body>
@@ -71,6 +73,7 @@
             <li><a href="">SALE</a></li>
             <li><a href="">LIÊN HỆ</a></li>
         </div>
+
         <div class="other">
             <li class="search-bar"><input placeholder="Tìm kiếm" type="text" name="" id=""><a class="fa fa-search"
                     href=""></a></li>
@@ -79,119 +82,109 @@
             <li><a class="fa fa-shopping-bag" href=""></a></li>
         </div>
     </header>
-
-    <!-- Siler------------------------------------------ -->
-    <main class="main-content">
-        <section class="slideshow">
-            <div class="slideshow-inner">
-                <div class="slides">
-                    <div class="slide is-active ">
-                        <div class="slide-content">
-                            <div class="caption">
-                                <div class="title">SMALL DIOR BOOK TOTE</div>
-                                <div class="text">
-                                    <p>Blue Dior Oblique Embroidery</p>
-                                </div>
-                                <a href="#" class="btn">
-                                    <span class="btn-inner">Learn More</span>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="image-container">
-                            <img src="image/totedior.jpg" alt="" class="image" />
-                        </div>
-                    </div>
-                    <div class="slide">
-                        <div class="slide-content">
-                            <div class="caption">
-                                <div class="title">MEDIUM DIOR BOOK TOTE</div>
-                                <div class="text">
-                                    <p>Blue Dior Oblique Embroidery </p>
-                                </div>
-                                <a href="#" class="btn">
-                                    <span class="btn-inner">Learn More</span>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="image-container">
-                            <img src="image/totedior1.jpg" alt="" class="image" />
-                        </div>
-                    </div>
-                    <div class="slide">
-                        <div class="slide-content">
-                            <div class="caption">
-                                <div class="title">ONTHEGO MM</div>
-                                <div class="text">
-                                    <p>Kaki/ Beige</p>
-                                </div>
-                                <a href="#" class="btn">
-                                    <span class="btn-inner">Learn More</span>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="image-container">
-                            <img src="image/totelv.jpg" alt="" class="image" />
-                        </div>
-                    </div>
-                    <div class="slide">
-                        <div class="slide-content">
-                            <div class="caption">
-                                <div class="title">ONTHEGO MM</div>
-                                <div class="text">
-                                    <p>Monogram</p>
-                                </div>
-                                <a href="#" class="btn">
-                                    <span class="btn-inner">Learn More</span>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="image-container">
-                            <img src="image/totelv1.jpg" alt="" class="image" />
-                        </div>
-                    </div>
+    <!-- Category-------------------------------------- -->
+    <section class="category">
+        <div class="container">
+            <div class="category-top row">
+                <p>Trang Chủ</p> <span>&#10230;</span>
+                <p>Nữ</p> <span>&#10230;</span>
+                <p>Đồ Nữ Mới Về</p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="category-left">
+                    <ul>
+                        <li class="category-left-li"><a href="#">NỮ</a>
+                            <ul>
+                                <li><a href="">Túi/Ví Nữ</a></li>
+                                <li><a href="">ÁO</a></li>
+                                <li><a href="">QUẦN/VÁY</a></li>
+                                <li><a href="">PHỤ KIỆN</a></li>
+                            </ul>
+                        </li>
+                        <li class="category-left-li"><a href="#">NAM</a>
+                            <ul>
+                                <li><a href="">Túi/Ví Nam</a></li>
+                                <li><a href="">ÁO</a></li>
+                                <li><a href="">QUẦN</a></li>
+                                <li><a href="">PHỤ KIỆN</a></li>
+                            </ul>
+                        </li>
+                        <li class="category-left-li"><a href="">BỘ SƯU TẬP</a></li>
+                    </ul>
                 </div>
-                <div class="pagination">
-                    <div class="item is-active">
-                        <span class="icon">1</span>
+                <div class="category-right row">
+                    <div class="category-right-top-item">
+                        <p>Túi/Ví Nữ</p>
                     </div>
-                    <div class="item">
-                        <span class="icon">2</span>
+                    <div class="category-right-top-item">
+                        <button><span>Bộ lọc</span><i class="fas fa-sort-down"></i></button>
                     </div>
-                    <div class="item">
-                        <span class="icon">3</span>
+                    <div class="category-right-top-item">
+                        <select name="" id="">
+                            <option value="">Sắp xếp</option>
+                            <option value="">Giá: cao đến thấp</option>
+                            <option value="">Giá: thấp đến cao</option>
+                        </select>
                     </div>
-                    <div class="item">
-                        <span class="icon">4</span>
+                    <div class="category-right-content row">
+                        <div class="category-right-content-item">
+                            <img src="image/sp1-goyard.jpg" alt="">
+                            <a href="product.html">Ví dài Goyard Zippy</h1></a><h1>
+                            <p>26.000.000 <sup>đ</sup></p>
+                        </div>
+                        <div class="category-right-content-item">
+                            <img src="image/sp2-goyard.jpg" alt="">
+                            <h1>Túi Goyard Vàng</h1>
+                            <p>26.000.000 <sup>đ</sup></p>
+                        </div>
+                        <div class="category-right-content-item">
+                            <img src="image/sp3-chanel.jpg" alt="">
+                            <h1>Ví Zippy Chanel</h1>
+                            <p>26.000.000 <sup>đ</sup></p>
+                        </div>
+                        <div class="category-right-content-item">
+                            <img src="image/sp4-chanel.jpg" alt="">
+                            <h1>Ví Zippy Chanel</h1>
+                            <p>26.000.000 <sup>đ</sup></p>
+                        </div>
+                        <div class="category-right-content-item">
+                            <img src="image/sp5-hermes.jpg" alt="">
+                            <h1>Túi Hermes</h1>
+                            <p>26.000.000 <sup>đ</sup></p>
+                        </div>
+                        <div class="category-right-content-item">
+                            <img src="image/sp6-giarite.jpg" alt="">
+                            <h1>Túi Giarite</h1>
+                            <p>26.000.000 <sup>đ</sup></p>
+                        </div>
+                        <div class="category-right-content-item">
+                            <img src="image/sp7-giarite.jpg" alt="">
+                            <h1>Túi Giarite</h1>
+                            <p>26.000.000 <sup>đ</sup></p>
+                        </div>
+                        <div class="category-right-content-item">
+                            <img src="image/sp8-dior.jpg" alt="">
+                            <h1>Tote bag Dior</h1>
+                            <p>26.000.000 <sup>đ</sup></p>
+                        </div>
                     </div>
-                </div>
-                <div class="arrows">
-                    <div class="arrow prev">
-                        <span class="svg svg-arrow-left">
-                            <svg version="1.1" id="svg4-Layer_1" xmlns="http://www.w3.org/2000/svg"
-                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="14px" height="26px"
-                                viewBox="0 0 14 26" enable-background="new 0 0 14 26" xml:space="preserve">
-                                <path
-                                    d="M13,26c-0.256,0-0.512-0.098-0.707-0.293l-12-12c-0.391-0.391-0.391-1.023,0-1.414l12-12c0.391-0.391,1.023-0.391,1.414,0s0.391,1.023,0,1.414L2.414,13l11.293,11.293c0.391,0.391,0.391,1.023,0,1.414C13.512,25.902,13.256,26,13,26z" />
-                            </svg>
-                            <span class="alt sr-only"></span>
-                        </span>
-                    </div>
-                    <div class="arrow next">
-                        <span class="svg svg-arrow-right">
-                            <svg version="1.1" id="svg5-Layer_1" xmlns="http://www.w3.org/2000/svg"
-                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="14px" height="26px"
-                                viewBox="0 0 14 26" enable-background="new 0 0 14 26" xml:space="preserve">
-                                <path
-                                    d="M1,0c0.256,0,0.512,0.098,0.707,0.293l12,12c0.391,0.391,0.391,1.023,0,1.414l-12,12c-0.391,0.391-1.023,0.391-1.414,0s-0.391-1.023,0-1.414L11.586,13L0.293,1.707c-0.391-0.391-0.391-1.023,0-1.414C0.488,0.098,0.744,0,1,0z" />
-                            </svg>
-                            <span class="alt sr-only"></span>
-                        </span>
+                    <div class="category-right-bottom row">
+                        <div class="category-right-bottom-item">
+                            <p>Hiển thị 2 <span>|</span> 4 sản phẩm</p>
+                        </div>
+                        <div class="category-right-bottom-item">
+                            <p><span>&#171;</span><span>1 2 3 4 5 6 <span>&#187;</span>Trang cuối</span></p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </section>
-    </main>
+        </div>
+    </section>
 
+
+    <!-- Footer------------------------------------------ -->
     <section class="app-container">
         <p>Tải ứng dụng 80Authentics</p>
         <div class="app-google">
@@ -201,6 +194,7 @@
         <p>Đăng ký để nhận thông tin khuyến mãi mới nhât</p>
         <input type="text" placeholder="Nhập Email của bạn...">
     </section>
+
     <div class="footer-top">
         <li><a href=""><img src="image/dathongbao.png" alt=""></a></li>
         <li><a href="">Liên Hệ</a></li>
@@ -212,19 +206,19 @@
             <a href="" class="fab fa-youtube"></a>
         </li>
     </div>
+
     <div class="footer-center">
         <p> Công ty Cổ phần 80-Authentics số đăng ký kinh doanh: 8888866666</br>
             Địa chỉ đăng ký: 129 Nguyễn Trãi - Phường Thượng Đình - Quận Thanh Xuân - TP.Hà Nội</br>
             Đặt hàng online: <b>0384.286.898</b></p>
+
     </div>
 
     <footer>
         <div>© 2022 – 80Authentics. All Rights Reserved.</div>
     </footer>
-    
     <script src="javascript/script.js"></script>
     <script src="javascript/slider.js"></script>
-
 </body>
 
 </html>
