--- a/giao-dien/category.html
+++ b/giao-dien/category.html
@@ -77,7 +77,7 @@
         <div class="other">
             <li class="search-bar"><input placeholder="Tìm kiếm" type="text" name="" id=""><a class="fa fa-search"
                     href=""></a></li>
-            <li><a class="fa fa-paw" href=""></a></li>
+            <!-- <li><a class="fa fa-paw" href=""></a></li> -->
             <li><a class="fa fa-user" href=""></a></li>
             <li><a class="fa fa-shopping-bag" href=""></a></li>
         </div>
