--- a/giao-dien/index.html
+++ b/giao-dien/index.html
@@ -74,7 +74,7 @@
         <div class="other">
             <li class="search-bar"><input placeholder="Tìm kiếm" type="text" name="" id=""><a class="fa fa-search"
                     href=""></a></li>
-            <li><a class="fa fa-paw" href=""></a></li>
+            <!-- <li><a class="fa fa-paw" href=""></a></li> -->
             <li><a class="fa fa-user" href=""></a></li>
             <li><a class="fa fa-shopping-bag" href=""></a></li>
         </div>
@@ -221,7 +221,7 @@
     <footer>
         <div>© 2022 – 80Authentics. All Rights Reserved.</div>
     </footer>
-    
+
     <script src="javascript/script.js"></script>
     <script src="javascript/slider.js"></script>
 
