--- a/giao-dien/product.html
+++ b/giao-dien/product.html
@@ -73,7 +73,7 @@
         <div class="other">
             <li class="search-bar"><input placeholder="Tìm kiếm" type="text" name="" id=""><a class="fa fa-search"
                     href=""></a></li>
-            <li><a class="fa fa-paw" href=""></a></li>
+            <!-- <li><a class="fa fa-paw" href=""></a></li> -->
             <li><a class="fa fa-user" href=""></a></li>
             <li><a class="fa fa-shopping-bag" href=""></a></li>
         </div>
@@ -101,8 +101,8 @@
                 </div>
                 <div class="product-content-right">
                     <div class="procduct-content-right-product-name">
-                        <h1>Ví dài Goyard Zippy</h1>
-                        <p>MSP: SP686868</p>
+                        <h1>Goyard Matignon GM Wallet</h1>
+                        <p>MSP: Goyard</p>
                     </div>
                     <div class="product-content-right-product-price">
                         <p>26.000.000<sup>2</sup></p>
@@ -111,6 +111,92 @@
                         <p><span style="font-weight: bold">Màu sắc</span>: Trắng xám <span style="color: red;">*</span></p>
                         <div class="product-content-right-product-color-img">
                             <img src="image/spcolor.png" alt="">
+                        </div>
+                    </div>
+                    <div class="product-content-right-product-size">
+                        <p style="font-weight: bold;">Size:</p>
+                        <span>XS</span>
+                        <span>S</span>
+                        <span>M</span>
+                        <span>L</span>
+                        <span>XL</span>
+                    </div>
+                    <div class="quanlity">
+                        <p style="font-weight: bold;">Số lượng:</p>
+                        <input type="number" min="0" value="1">
+                    </div>
+                    <p style="color: red;">Vui lòng chọn size <span>*</span></p>
+                    <div class="product-content-right-product-button">
+                        <button><i class="fas fa-shopping-cart"></i>Mua hàng</button>
+                        <button><p>Tìm tại cửa hàng</p></button>
+                    </div>
+                    <div class="product-content-right-product-icon">
+                        <div class="product-content-right-product-icon-item">
+                            <i class="fas fa-phone"></i><p>Hotline</p>
+                        </div>
+                        <div class="product-content-right-product-icon-item">
+                            <i class="far fa-comments"></i><p>Chat</p>
+                        </div>
+                        <div class="product-content-right-product-icon-item">
+                            <i class="far fa-envelope"></i><p>Mail</p>
+                        </div>
+                    </div>
+                    <div class="product-content-right-product-QR">
+                        <img src="image/qrcode_huytrung21398.github.io.png" alt="">
+                    </div>
+                    <div class="product-content-right-product-bottom">
+                        <div class="product-content-right-bottom-top">
+                            &#8744;
+                        </div>
+                        <div class="product-content-right-bottom-content-big">
+                            <div class="product-content-right-bottom-content-title row">
+                                <div class="product-content-right-bottom-content-title-item chitiet">
+                                    <p>Chi tiết</p>
+                                </div>
+                                <div class="product-content-right-bottom-content-title-item baoquan">
+                                    <p>Bảo quản</p>
+                                </div> 
+                                <div class="product-content-right-bottom-content-title-item kichthuoc">
+                                    <p>Kích thước</p>
+                                </div>
+                            </div>                            
+                            <div class="product-content-right-bottom-content">
+                                <div class="product-content-right-bottom-content-chitiet">
+                                    The Matignon GM wallet has a long shape and closes securely with a zip. Its 12 card slots, central zipped compartment and two large compartments are perfect for cards, notes, change and other everyday papers.
+                                </div>
+                                <div class="product-content-right-bottom-content-baoquan">
+                                    CARE AND USE ADVICE<br/>
+
+                                    We recommend to follow certain precautions to ensure proper use and care of this product.<br/>
+
+                                    HOW TO CARE FOR YOUR ITEM?<br/>
+
+                                    Do not wash in a washing machine or use any other mechanical process.
+                                    Clean all items in Goyardine and leather with a soft cloth that does not pill.
+                                    Move the cloth all over the item; avoid intensive and repetitive rubbing which may damage the chevrons or the leather.<br/>
+                                    Never use any solvents or cleaning products available from shops.
+                                    Regularly return your item to our craftsmen for deep cleaning or reconditioning.
+                                    Keep the item in its case away from light, heat and damp when it is not being used.
+                                    Do not use plastic to store the item.<br/>
+
+                                    WHAT ARE THE KEY GUIDELINES?<br/>
+                                    Do not put too many cards in the card slots to avoid ripping the leather.
+                                    Do not graze or rub the item against rough surfaces.
+                                    Avoid contact with water, greasy or oily products, make-up and perfumes.
+                                    If the item comes into contact with water, dab it dry with a soft, absorbent cloth that does not pill.
+                                    Protect the item from damp, extended exposure to artificial, natural light or intense heat.
+                                </div>
+                                <div class="product-content-right-bottom-content-kichthuoc">
+                                    11 cm x 2.3 cm x 20 cm , 280 g <br/>
+                                    Goyardine Canvas & Vauzelles Calfskin <br/>
+                                    Yellow Nièvre Goatskin Lining<br/>
+                                    Finishing Palladium<br/>
+                                    Zipper closing system<br/>
+                                    12 card slots, 2 large flat pockets, compartments, secure change pocket<br/>
+                                    Made in France<br/>
+                                    MATIG2GMLTY50CL50P
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
